Changelog
=========

5.0.dev0 - (unreleased)
-----------------------
* Bug fix: take into consideration that fieldset name might be incorrect
  when going through the schemata fields
  [ichim-david refs #86786]

4.9 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

4.8 - (2016-11-21)
------------------
* Change: remove metadata filtering from processForm in order to check every
  available fields if they affect what objects need to be reindexed
  [ichim-david refs #77661]

4.7 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

4.6 - (2016-04-18)
------------------
* Bugfix: syncing effectiveDate and expirationDate is no longer done
  only if workflowSync is also enabled
  [ichim-david refs #71102]
* Feature: processForm will now reindex translations if languageIndependent
  fields are modified and we have translations
  [ichim-david refs #71102]

4.5 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.4 - (2013-05-20)
------------------
* Bug fix: Fixed permission for manage_translations_form, anonymous
  can't access the page anymore.
  [prospchr fixes #14318]

4.3 - (2012-08-27)
------------------
* Cleanup: fixed docstrings typos and formatting
  [ghicaale]

4.2 - (2012-06-13)
------------------
* Bug fix: Force unicode for Titles in getDeletableLanguages.py
  [prospchr fixes #5165]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Cleanup: Fixed all pylint, pyflakes violations
  [ghicaale - EEA #4295]
* Change: replace dependecy to collective.monkey with collective.monkeypatcher
  [ghicaale - EEA #4295]